# regalo-digital-planes

./: AGENTS.md  PROJECT_SPEC.md  README.md  index.html  pyproject.toml  script.js  styles.css
config/: defaults.example.ini
docs/: QA_IMPLEMENTATION_REPORT.md
docs/interfaces/: README.md  json_contracts.md
docs/testing/: MINIMUM_TEST_MATRIX.md
src/python/agi_style_forex_bot_mt5/: __init__.py  bot.py  cli.py  config.py  contracts.py  json_contracts.py
src/python/agi_style_forex_bot_mt5/backtesting/: __init__.py  backtester.py  monte_carlo.py  performance_report.py  stress_tester.py  walk_forward_optimizer.py
src/python/agi_style_forex_bot_mt5/data/: __init__.py  feature_engineering.py  indicators.py  market_data.py  regime_detector.py  tick_data.py
src/python/agi_style_forex_bot_mt5/execution/: __init__.py  broker_quality.py  execution_engine.py  mt5_connector.py  shadow_execution.py  slippage_monitor.py  spread_filter.py  trade_manager.py
src/python/agi_style_forex_bot_mt5/risk/: __init__.py  correlation_guard.py  currency_exposure.py  emergency_kill_switch.py  portfolio_guard.py  position_sizer.py  risk_engine.py
src/python/agi_style_forex_bot_mt5/strategy/: __init__.py  scoring_engine.py  strategy_breakout_compression.py  strategy_ensemble.py  strategy_liquidity_sweep.py  strategy_mean_reversion.py  (+3 more)
tests/python/: test_backtesting.py  test_bot_shadow.py  test_config_contracts.py  test_data_indicators.py  test_execution_engine.py  test_integration_safety.py  test_phase2_end_to_end.py  test_risk_engine.py  test_strategy_engine.py  test_telemetry.py
(+5 files in other folders)
