[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-style-forex-bot-mt5"
version = "0.1.0"
description = "Fail-closed demo-only Forex bot framework for MetaTrader 5."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
mt5 = [
  "MetaTrader5>=5.0.45",
]

[project.scripts]
agi-style-forex-bot = "agi_style_forex_bot_mt5.cli:main"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src/python"]
addopts = "-q"
